[gd_scene load_steps=4 format=3 uid="uid://dn8utwayxm227"]

[ext_resource type="Script" path="res://Scenes/Weapons/effectArea.gd" id="1_xkg1r"]
[ext_resource type="AudioStream" uid="uid://b66uyg82wim8g" path="res://Audio/WeaponSFX/Grenade/grenadeExplosion.wav" id="2_lb6fk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ell7j"]

[node name="effectArea" type="Area2D"]
z_index = 6
collision_layer = 4
collision_mask = 7
script = ExtResource("1_xkg1r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ell7j")

[node name="applicationTimer" type="Timer" parent="."]

[node name="durationTimer" type="Timer" parent="."]

[node name="bleedingTimer" type="Timer" parent="."]

[node name="explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_lb6fk")
volume_db = 13.0
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="applicationTimer" to="." method="_on_application_timer_timeout"]
[connection signal="timeout" from="durationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="bleedingTimer" to="." method="_on_bleeding_timer_timeout"]
